package org.learningu.scheduling.logic;

enum SerialLogicImpl {
	DUPLICATE_SECTION = 1;
	LOCAL_CONFLICT = 2;
	ROOM_CONFLICT = 3;
	RESOURCE = 4;
	TEACHER_CONFLICT = 5;
	PREREQUISITES = 6;
	GRADE_RANGES = 7;
	TEACHER_GROUP_CAP = 8;
	LUNCH = 9;
}

message SerialLogics {
	repeated SerialLogicImpl logic = 1;
}